--- a/src/components/datepicker/datepicker-dropdown/pick-month/pickMonth.scss
+++ b/src/components/datepicker/datepicker-dropdown/pick-month/pickMonth.scss
@@ -11,6 +11,7 @@
         font-size: 12px;
         cursor: pointer;
         user-select: none;
+        border-radius: 10px;
         border: 1px solid unset;
 
         &:hover {
