--- a/src/components/datepicker/datepicker-dropdown/body/body.scss
+++ b/src/components/datepicker/datepicker-dropdown/body/body.scss
@@ -25,7 +25,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            border-radius: 5px;
+            border-radius: var(--corner);
             user-select: none;
             background-size: 100%;
             margin: 5px 0;
@@ -45,7 +45,7 @@
                 width: 25px;
                 justify-content: center;
                 background-color: var(--primary);
-                border-radius: 5px;
+                border-radius: var(--corner);
 
                 svg {
                     width: 7px;
