--- a/src/components/datepicker/datepicker-dropdown/datepickerDropdown.scss
+++ b/src/components/datepicker/datepicker-dropdown/datepickerDropdown.scss
@@ -5,7 +5,7 @@
     padding: 5px;
     background: var(--background);
     border: 1px solid rgba($color: #000000, $alpha: 0.125);
-    border-radius: 5px;
+    border-radius: var(--corner);
 
     * {
         color: var(--color);
@@ -13,6 +13,19 @@
 
     .__datepicker-dropdown-footer {
         border-top: var(--light-border);
-        padding: 10px;
+        padding: 5px 5px 0 0px;
+        font-size: 12px;
+        cursor: pointer;
+        display: flex;
+
+        div {
+            margin-right: 10px;
+            border-radius: var(--corner);
+            padding: 3px 10px;
+
+            &:hover {
+                background-color: var(--primary);
+            }
+        }
     }
 }
