--- a/src/components/datepicker/datepicker-dropdown/body/body.scss
+++ b/src/components/datepicker/datepicker-dropdown/body/body.scss
@@ -12,6 +12,7 @@
         padding-bottom: 5px;
         width: 100%;
         margin-bottom: 10px;
+        direction: ltr !important;
 
         .__datepicker-dropdown-header-text {
             cursor: pointer;
