fix bug in modal

--- a/src/components/datepicker/style.scss
+++ b/src/components/datepicker/style.scss
@@ -7,6 +7,7 @@
         --corner: 5px;
         font-family: "IRANSans";
         font-size: 12px;
+        --background: #fff;
     }
 
     &.__datepicker-theme-blue {
