change disable day color - and fix bug

--- a/src/components/datepicker/datepicker-dropdown/datepickerDropdown.scss
+++ b/src/components/datepicker/datepicker-dropdown/datepickerDropdown.scss
@@ -18,6 +18,7 @@
     border-radius: var(--corner);
     font-size: 12px;
     z-index: 1000;
+    direction: ltr;
 
     &.right-top {
         bottom: 100%;
@@ -55,6 +56,7 @@
 
     * {
         color: var(--color);
+        direction: ltr;
     }
 
     .__datepicker-dropdown-footer {
