--- a/src/components/datepicker/datepicker-dropdown/pick-day/pickDay.scss
+++ b/src/components/datepicker/datepicker-dropdown/pick-day/pickDay.scss
@@ -63,7 +63,18 @@
             }
 
             &.__datepicker-day-disabled {
-                opacity: 0.4;
+                opacity: 0.8;
+
+                &:after {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    content: "";
+                    display: block;
+                    background: rgba($color: #000000, $alpha: 0.2);
+                }
             }
 
             &.__datepicker-today {
