--- a/src/components/datepicker/datepicker-dropdown/pick-year/pickYear.scss
+++ b/src/components/datepicker/datepicker-dropdown/pick-year/pickYear.scss
@@ -8,6 +8,7 @@
         border: 1px solid transparent;
         cursor: pointer;
         margin-bottom: 10px;
+        width: 45px;
 
         &:hover {
             border: 1px solid var(--primary);
