text center in year

--- a/src/components/datepicker/datepicker-dropdown/pick-year/pickYear.scss
+++ b/src/components/datepicker/datepicker-dropdown/pick-year/pickYear.scss
@@ -9,6 +9,7 @@
         cursor: pointer;
         margin-bottom: 10px;
         width: 45px;
+        text-align: center;
 
         &:hover {
             border: 1px solid var(--primary);
