--- a/src/components/calendar/content/style.scss
+++ b/src/components/calendar/content/style.scss
@@ -5,6 +5,10 @@
         display: flex;
         justify-content: space-between;
 
+        .__calender-header-children {
+            width: 100px;
+        }
+
         .__calender-header-controllers {
             display: flex;
             align-items: center;
@@ -14,6 +18,7 @@
                 justify-content: center;
                 align-items: center;
                 color: rgb(59, 59, 59);
+                user-select: none;
                 margin: 0 20px;
 
                 &:nth-last-child(1) {
