--- a/src/components/calendar/content/style.scss
+++ b/src/components/calendar/content/style.scss
@@ -6,7 +6,7 @@
         justify-content: space-between;
 
         .__calender-header-children {
-            width: 100px;
+            width: 130px;
         }
 
         .__calender-header-controllers {
@@ -20,10 +20,24 @@
                 color: rgb(59, 59, 59);
                 user-select: none;
                 margin: 0 20px;
+                border: var(--border);
+                width: 25px;
+                border-radius: 3px;
+                cursor: pointer;
+                height: 25px;
 
                 &:nth-last-child(1) {
                     transform: rotate(180deg);
                 }
+
+                &:hover {
+                    border-color: var(--primary);
+                    color: #fff;
+                }
+            }
+
+            .__calendar-header-today {
+                cursor: pointer;
             }
         }
     }
