change a little style

--- a/src/components/calendar/style.scss
+++ b/src/components/calendar/style.scss
@@ -4,6 +4,7 @@
 
     * {
         --border: 1px solid rgba(0, 0, 0, 0.125);
+        --disable-day-color: rgb(232,237,241);
     }
 
     &.__calendar-theme-blue {
