--- a/src/components/calendar/content/monthly/cell/style.scss
+++ b/src/components/calendar/content/monthly/cell/style.scss
@@ -1,24 +1,32 @@
 .__calender-table-td {
     border: 1px solid rgba($color: #000000, $alpha: 0.125);
     position: relative;
+    z-index: 1;
 
     .__calendar-table-td-body {
         padding: 0px;
         display: flex;
         flex-direction: column;
+        height: 100%;
 
         .__calendar-table-td-body-date {
             position: absolute;
             top: 5px;
             right: 5px;
             font-size: 11px;
+            color: #aaa;
+            user-select: none;
+        }
+
+        &:hover > .__calendar-table-td-body-date {
+            color: #000;
         }
 
         .__calendar-table-td-body-events {
             flex-grow: 1;
             flex: 1;
-            margin-top: 20px;
             min-height: 2em;
+            margin-top: 20px;
 
             .__calendar-table-td-body-events-item {
                 display: flex;
@@ -28,7 +36,9 @@
                 padding: 0 3px;
                 border-radius: 3px;
                 position: relative;
-                background-color: rgba($color: #000000, $alpha: 0.125);
+                background-color: #aaa;
+                z-index: 3;
+                user-select: none;
 
                 .__calendar-table-td-body-events-item-circle {
                     min-width: 3px;
@@ -49,10 +59,21 @@
         }
     }
 
+    &.__calender-past {
+        background: url("./past-day.png") repeat;
+        background-size: 50px;
+    }
+
     &.__calender-disabled-cell {
         opacity: .7;
-        background-color: #f7f7f7;
+        background-color: var(--disable-day-color);
     }
+
+    &.__calender-today {
+        outline: 1px solid var(--primary);
+        z-index: 2;
+    }
+
 }
 
 .__calender-month-header {
