--- a/src/components/calendar/content/monthly/cell/style.scss
+++ b/src/components/calendar/content/monthly/cell/style.scss
@@ -49,12 +49,14 @@
                     margin-right: 5px;
                 }
 
-                &:hover {
+                &.hover {
                     opacity: 0.95;
+                    border: 1px solid rgba($color: #000000, $alpha: 1.0)
                 }
 
                 &.hide {
-                    visibility: hidden;
+                    opacity: 0 !important;
+                    z-index: 15;
                 }
             }
         }
