fix bug in priority

--- a/src/components/calendar/content/monthly/cell/style.scss
+++ b/src/components/calendar/content/monthly/cell/style.scss
@@ -82,6 +82,10 @@
         z-index: 2;
     }
 
+    &.__calender-table-td-drag-hover{
+        background-color: #ffffcc;
+    }
+
 }
 
 .__calender-month-header {
