fix a bug in calendar

--- a/src/components/calendar/content/monthly/cell/style.scss
+++ b/src/components/calendar/content/monthly/cell/style.scss
@@ -101,6 +101,7 @@
 
     .__calender-header-title {
         font-size: 22px;
+        text-wrap: nowrap;
     }
 
     .__calender-header-subtitle {
