--- a/src/components/calendar/content/yearly/style.scss
+++ b/src/components/calendar/content/yearly/style.scss
@@ -23,8 +23,8 @@
                 &:before {
                     content: "";
                     display: block;
-                    width: 170%;
-                    height: 3px;
+                    width: 75px;
+                    height: 1px;
                     border-radius: 10px;
                     position: absolute;
                     top: 50%;
