--- a/src/components/calendar/content/yearly/events-list/style.scss
+++ b/src/components/calendar/content/yearly/events-list/style.scss
@@ -27,14 +27,15 @@
             cursor: pointer;
             padding: 2px 4px;
             border-radius: 5px;
+            font-size: 12px;
 
             svg {
-                font-size: 20px;
-                width: 20px;
-                height: 20px;
+                font-size: 15px;
+                width: 15px;
+                height: 15px;
             }
 
-            &:hover{
+            &:hover {
                 background-color: rgba($color: #000000, $alpha: 0.125);
             }
         }
@@ -68,6 +69,35 @@
             width: 50px;
             height: 50px;
             color: var(--primary);
+        }
+    }
+
+    .__add-event {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        color: #fff;
+        background-color: var(--primary);
+        border-radius: 20px;
+        width: 30px;
+        height: 30px;
+        user-select: none;
+        cursor: pointer;
+
+        div {
+            align-self: center;
+            width: 14px;
+            height: 10px;
+            line-height: 5px;
+        }
+
+        &:active {
+            background-color: var(--secondary);
+
         }
     }
 }
