--- a/src/components/datepicker/style.scss
+++ b/src/components/datepicker/style.scss
@@ -61,4 +61,33 @@
             --light-border: 1px solid rgba(0, 0, 0, 0.8);
         }
     }
+
+    .__datepicker-input {
+        position: relative;
+
+        .__datepicker-clear-btn {
+            position: absolute;
+            top: 50%;
+            right: 5px;
+            color: #aaa;
+            transform: translate3d(0, -50%, 0);
+            cursor: pointer;
+            width: 20px;
+            height: 20px;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            border-radius: 10px;
+
+            &:hover {
+                background: #f7f7f7;
+            }
+        }
+    }
+
+    &.fa {
+        .__datepicker-clear-btn {
+            left: 5px;
+        }
+    }
 }
